@@ -1,6 +1,8 @@
 Revision history for Padre-Plugin-SpellCheck
 
 {{$NEXT}}
+        - rename method 'spell_preferences' to 'plugin_preferences',
+          so that the dialog can also be called from the plugin manager (ZENOG)
 
 1.2    2010.10.29
         - Removed Test::NeedsDisplay dependency (AZAWAWI)
